--- a/UNIT 1/portfolio.html
+++ b/UNIT 1/portfolio.html
@@ -9,7 +9,7 @@
 
     <header>
         <h1>Pendem Sai Madhav</h1>
-        <p></p>
+        <p>Hi, I’m Sai Madhav, a passionate Computer Science Engineering student at Keshav Memorial Institute of Technology. I have a strong interest in web development, Java Programming, and IoT real-time projects. My goal is to solve real-world problems using technology and continuously enhance my skills in software development and AI-driven solutions.</p>
     </header>
 
     <section>
