--- a/portfolio.html
+++ b/portfolio.html
@@ -4,59 +4,136 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sai Madhav - Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #0073e6;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            margin: 0;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            border-bottom: 2px solid #0073e6;
+            padding-bottom: 5px;
+        }
+        ul, ol {
+            list-style-type: square;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 10px 0;
+        }
+        table, th, td {
+            border: 1px solid #0073e6;
+            padding: 8px;
+            text-align: left;
+        }
+        a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .contact-info p {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 <body>
-
     <header>
-        <h1>Pendem Sai Madhav</h1>
-        <p>Hi, I’m Sai Madhav, a passionate Computer Science Engineering student at Keshav Memorial Institute of Technology. I have a strong interest in web development, Java Programming, and IoT real-time projects. My goal is to solve real-world problems using technology and continuously enhance my skills in software development and AI-driven solutions.</p>
+        <h1>Abcd</h1>
+        <img src="profile.jpg" alt="Sai Madhav" width="150">
+        <p>Hi, I’m Sai Madhav, a passionate Computer Science Engineering student at Keshav Memorial Institute of Technology.</p>
     </header>
-
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li>Backend development</li>
-            <li>Java programming</li>
-            <li>Gen AI</li>
-            <li>Java script</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Projects / Work Experience</h2>
-        <ul>
-            <li><a href="https://github.com/rithesh10/workout2.git" target="_blank">Workout Assistant</a> - Web Application where user can generate diet,workout plan based on his/her requirements. Also suggest workout posture using opencv framework</li>
-            <li><a href="https://github.com/rithesh10/ps.git" target="_blank">Manas Health</a> - A portal where students can test their mental health and review them.</li>
-            
-        </ul>
-    </section>
-
-    <!-- <section>
-        <h2>Feedback / Achievements</h2>
-        <p>Edit this section to add any feedback, awards, or achievements.</p>
-    </section> -->
-
-    <section>
-        <h2>Hobbies</h2>
-        <p>Playing cricket</p>
-        <p>Reading books</p>
-        <p>Spending time with family</p>
-    </section>
-
-    <section>
-        <h2>Education Profile</h2>
-        <p><strong>Degree:</strong> Btech</p>
-        <p><strong>Institution:</strong> Keshav memorial institute of technology</p>
-        <p><strong>Year:</strong> 2026</p>
-    </section>
-
-    <section>
-        <h2>Contact Information</h2>
-        <p><strong>Email:</strong> saimadhav204@gmail.com</p>
-        <p><strong>Phone:</strong> +91 9177756036</p>
-        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/sai-madhav777/" target="_blank">Linked In Profile</a></p>
-        <p><strong>GitHub:</strong> <a href="https://github.com/Saimadhav-333" target="_blank">GitHub Profile</a></p>
-    </section>
-
+    <div class="container">
+        <section>
+            <h2>Contact Information</h2>
+            <p><strong>Email:</strong> saimadhav204@gmail.com</p>
+            <p><strong>Phone:</strong> +91 9177756036</p>
+        </section>
+        <section>
+            <h2>Career Objective</h2>
+            <p>To solve real-world problems using technology and continuously enhance my skills in software development and AI-driven solutions.</p>
+        </section>
+        <section>
+            <h2>Academic Information</h2>
+            <table>
+                <tr>
+                    <th>Degree</th>
+                    <th>Institution</th>
+                    <th>Year</th>
+                </tr>
+                <tr>
+                    <td>B.Tech</td>
+                    <td>Keshav Memorial Institute of Technology</td>
+                    <td>2026</td>
+                </tr>
+            </table>
+        </section>
+        <section>
+            <h2>Technical Skills</h2>
+            <ul>
+                <li>Programming Languages: Java, JavaScript</li>
+                <li>Databases: MySQL</li>
+                <li>Web Technologies: HTML, CSS, React</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <ol>
+                <li><a href="https://github.com/rithesh10/workout2.git" target="_blank">Workout Assistant</a> - Web Application for generating diet and workout plans with OpenCV posture detection.</li>
+                <li><a href="https://github.com/rithesh10/ps.git" target="_blank">Manas Health</a> - A portal for students to test and review their mental health.</li>
+            </ol>
+        </section>
+        <section>
+            <h2>Achievements</h2>
+            <ol>
+                <li>Participated in multiple coding hackathons.</li>
+                <li>Developed AI-based solutions for real-world problems.</li>
+            </ol>
+        </section>
+        <section>
+            <h2>Strengths</h2>
+            <ul>
+                <li>Strong problem-solving skills</li>
+                <li>Good teamwork and collaboration</li>
+                <li>Quick learning ability</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Personal Profile</h2>
+            <table>
+                <tr>
+                    <th>Current Location</th>
+                    <th>Date of Birth</th>
+                    <th>Languages Known</th>
+                </tr>
+                <tr>
+                    <td>India</td>
+                    <td>20/08/2004</td>
+                    <td>English, Telugu, Hindi</td>
+                </tr>
+            </table>
+        </section>
+    </div>
 </body>
 </html>
