--- a/portfoliowithfile.html
+++ b/portfoliowithfile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sai Madhav - Portfolio</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,6 +53,6 @@
             </ul>
         </section>
     </div>
-    <script src="bootstrap.bundle.min.js"></script>
+    <script src="./bootstrap.bundle.min.js"></script>
 </body>
 </html>
