--- a/ecommerceWebsite/gallery.html
+++ b/ecommerceWebsite/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Products - E-Shop</title>
+    <title>Gallery - E-Shop</title>
     <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
@@ -23,8 +23,12 @@
         </div>
     </nav>
     <div class="container mt-4">
-        <h1>Our Products</h1>
-        <p>Browse our latest products here.</p>
+        <h1>Gallery</h1>
+        <div class="row">
+            <div class="col-md-4"><img src="images/image1.jpg" class="img-fluid" alt="Gallery Image 1"></div>
+            <div class="col-md-4"><img src="images/image2.jpg" class="img-fluid" alt="Gallery Image 2"></div>
+            <div class="col-md-4"><img src="images/image3.jpg" class="img-fluid" alt="Gallery Image 3"></div>
+        </div>
     </div>
 </body>
 </html>
