--- a/portfolio.html
+++ b/portfolio.html
@@ -56,11 +56,42 @@
         .contact-info p {
             margin: 5px 0;
         }
+        .contact-us {
+            margin-top: 20px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            font-weight: bold;
+        }
+        .form-group input, .form-group textarea {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #0073e6;
+            border-radius: 5px;
+        }
+        .error {
+            color: red;
+            font-size: 0.9em;
+        }
+        button {
+            background-color: #0073e6;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #005bb5;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Abcd</h1>
+        <h1>Sai Madhav</h1>
         <img src="profile.jpg" alt="Sai Madhav" width="150">
         <p>Hi, I’m Sai Madhav, a passionate Computer Science Engineering student at Keshav Memorial Institute of Technology.</p>
     </header>
@@ -133,6 +164,28 @@
                     <td>English, Telugu, Hindi</td>
                 </tr>
             </table>
+        </section>
+        <section class="contact-us">
+            <h2>Contact Us</h2>
+            <form>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div class="form-group">
+                    <label for="subject">Subject</label>
+                    <input type="text" id="subject" name="subject">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message"></textarea>
+                </div>
+                <button type="submit">Submit</button>
+            </form>
         </section>
     </div>
 </body>
